annotations step 1,2,3